--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ name         = "elpis"
 crate-type   = ["rlib", "cdylib"]
 
 [dependencies]
-epan-sys = { path = "../epan-sys", version = "0.1.0" }
-plugshark = { path = "../plugshark", version = "0.1.0" }
+epan-sys = { git = "https://github.com/Gbps/epan-sys" }
+plugshark = { git = "https://github.com/Gbps/plugshark", tag = "0.0.1" }
 anyhow = "1.0.69"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
